# EsoProg

./: .clang-format  .gitignore  .gitmodules  Build.lua  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  EsoProg.sln  Example_Program.txt  LICENSE.md  Premake.vcxproj  Premake.vcxproj.filters  README.md  vcpkg.json
App/: BrainFck.ini  Build-EsoProg.lua  EsoProg.vcxproj  imgui.ini
App/Examples/BrainFck/: CellWidth.txt  HelloWorldNegIndex.txt  HelloWorldPunc.txt
App/Src/: EsoProg.cpp  EsoProg.h  Main.cpp  Main.h
Core/BrainFckInterpreter/: Build-BrainFckInterpreter.lua  README.md
Core/BrainFckInterpreter/Src/: BrainFckAST.h  BrainFckASTVisitor.h  BrainFckParser.cpp  BrainFckParser.h  BrainFckRuntime.cpp  BrainFckRuntime.h  BrainFckToken.h  BrainFckTokeniser.cpp  BrainFckTokeniser.h
Core/ELanguages/: Build-ELanguages.lua
Core/ELanguages/Src/: ELanguages.h
Core/IAST/: Build-IAST.lua
Core/IAST/Src/: IASTVisitor.h
Core/IAbstractSyntaxTree/: Build-IAbstractSyntaxTree.lua
Core/IAbstractSyntaxTree/Src/: IASTVisitor.h  IAbstractSyntaxTree.h
Core/ILanguageParser/: Build-ILanguageParser.lua
Core/ILanguageParser/Src/: ITextTokeniser.cpp  ITextTokeniser.h  IToken.h  ITokeniser.h  PietRuntime.cpp  PietRuntime.h  PietStack.cpp
Core/IMemoryArray/Src/: IMemoryArray.h
Core/IParser/: Build-IParser.lua
Core/IParser/Src/: IParser.h
Core/IRuntime/: Build-IRuntime.lua
Core/IRuntime/Src/: CRuntime.h  IRuntime.h
Core/IStack/: Build-IStack.lua
Core/IStack/Src/: Stack.cpp  Stack.h
Core/ITokeniser/: Build-ITokeniser.lua
Core/ITokeniser/Src/: ITextTokeniser.h  IToken.h  ITokeniser.h
Core/ImGuiHelpers/: Build-ImGuiHelpers.lua  ImGuiFileDialogBox.vcxproj  ImGuiHelpers.vcxproj  ImGuiValueChangeCallbacks.vcxproj
Core/ImGuiHelpers/FileDialogBox/: FileDialogBox.cpp  FileDialogBox.h
Core/ImGuiHelpers/ImGuiSetStyles/: ImGuiSetStyles.cpp  ImGuiSetStyles.h
Core/ImGuiHelpers/ImGuiValueChangeCallbacks/: ImGuiValueChangeCallbacks.cpp  ImGuiValueChangeCallbacks.h
Core/Interpreters/BrainFckInterpreter/: Build-BrainFckInterpreter.lua  README.md
Core/Interpreters/NullInterpreter/: Build-NullInterpreter.lua
Core/Interpreters/PietInterpreter/: Build-PietInterpreter.lua  README.md
Core/LanguageHelpers/IAST/: Build-IAST.lua
Core/LanguageHelpers/IMemoryArray/: Build-IMemoryArray.lua
Core/LanguageHelpers/IParser/: Build-IParser.lua
Core/LanguageHelpers/IRuntime/: Build-IRuntime.lua
Core/LanguageHelpers/ITokeniser/: Build-ITokeniser.lua
Core/Logger/: Build-Logger.lua  Logger.vcxproj
Core/Logger/Src/: Log.h  LogLevel.h  LogLifecycle.cpp  LogLifecycle.h  LogMacros.h  LogManager.cpp  LogManager.h  LogTags.h  log.h
Core/NullInterpreter/: Build-NullInterpreter.lua
Core/NullInterpreter/Src/: NullRuntime.h
Core/PietInterpreter/: Build-PietInterpreter.lua  PietInterpreter.vcxproj
Core/PrettyPrinter/: PrettyPrinter.cpp  PrettyPrinter.h  TestPrettyPrinter.cpp
Core/Profiler/: Build-Profiler.lua
Core/RuntimeWrapper/: Build-RuntimeWrapper.lua
Core/SmartEnums/: Build-SmartEnums.lua  SmartEnum.h
EsoProg/: CMakeLists.txt  EsoProg.cpp  EsoProg.h  ImGuiHelpers.cpp  Main.cpp
EsoProg/File_Dialog_Box/: FileDialogBox.cpp
EsoProg/PietInterpreter/: PietImageTokeniser.cpp  PietImageTokeniser.h  PietRuntime.cpp  PietRuntime.h  PietStack.h  README.md
EsoProg/Resources/: stb_image.h
Piet_Interpreter/: CMakeLists.txt  EsoProg.cpp  EsoProg.h  ImGuiHelpers.cpp  Main.cpp  Main.h  Piet_Interpreter.cpp  Piet_Interpreter.h  Program.cpp  Program.h  SmartEnum.h
Piet_Interpreter/File_Dialog_Box/: FileDialogBox.cpp  FileDialogBox.h
Piet_Interpreter/Interpreter/: PietStack.cpp  PietStack.h  Runtime.cpp  Runtime.h  Token.h  Tokeniser.cpp  Tokeniser.h
Piet_Interpreter/PietInterpreter/: PietImageTokeniser.cpp  PietImageTokeniser.h  PietRuntime.h  PietStack.cpp  PietStack.h  PietTextTokeniser.cpp  PietTextTokeniser.h  PietToken.h  PietTokeniser.h  Runtime.cpp  Runtime.h  Tokeniser.cpp
Piet_Interpreter/Resources/: stb_image_write.h
(+41 files in other folders)
