# CMakeList.txt : CMake project for Piet_Interpreter, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Piet_Interpreter "Piet_Interpreter.cpp" "Piet_Interpreter.h")

# TODO: Add tests and install targets if needed.
find_package(glad CONFIG REQUIRED)
target_link_libraries(Piet_Interpreter PRIVATE glad::glad)

find_package(glfw3 CONFIG REQUIRED)
target_link_libraries(Piet_Interpreter PRIVATE glfw)

find_package(imgui CONFIG REQUIRED)
target_link_libraries(Piet_Interpreter PRIVATE imgui::imgui)